--- a/templates/matrix_seriation.html
+++ b/templates/matrix_seriation.html
@@ -12,13 +12,13 @@ line {
 }
 
 text.active {
-  fill: red;
+  fill: #0d775e;
   font-size: 120%;
 }
 
 rect.highlight {
     fill: none;
-    stroke: red;
+    stroke: #0d775e;
     stroke-width: 2;
 }
 
@@ -27,7 +27,8 @@ rect.highlight {
 <script src="{{ url_for('static', filename='js/matrix_seriation/reorder.js') }}"></script>
 <script src="{{ url_for('static', filename='js/matrix_seriation/matrix.js') }}"></script>
 
-<h1><i>Matrix seriation</i></h1>
+
+<h2>Matrix Seriation</h2>
 
 <div id="display"></div>
 <aside style="margin-top:80px;">
@@ -59,7 +60,10 @@ rect.highlight {
 
 var x = d3.scale.ordinal().rangeBands([0, width]),
     z = d3.scale.linear().domain([0, 4]).clamp(true),
-    c = d3.scale.category10().domain(d3.range(10));
+    // c = d3.scale.category10().domain(d3.range(10));
+    c = d3.scale.linear()
+    .range(["white", "#69b3a2"])
+    .domain([0,1]);
 
     var svg = d3.select("body").append("svg")
     .attr("width", width + margin.left + margin.right)
