Added dots to line chart, looks prettier

--- a/templates/base.html
+++ b/templates/base.html
@@ -335,8 +335,7 @@
         // console.log(svg,"from base");
         </script>
         <script src="{{ url_for('static', filename='js/survey.js') }}"></script>
-        <script src="{{ url_for('static', filename='js/sigLocP1.js') }}"></script>
-        <script src="{{ url_for('static', filename='js/calendarPie.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/sigLocations.js') }}"></script>
         <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     </body>
     </html>
