--- a/templates/matrix_seriation.html
+++ b/templates/matrix_seriation.html
@@ -61,7 +61,7 @@
                 <div class="col-6 justify-content-start">
                   <div class="form-floating">
                     <select id="order" class="form-select">
-                      <option value="name">by Name</option>
+                      <option value="name">by Date</option>
                       <option value="count">by Frequency</option>
                       <option value="group">by Cluster</option>
                       <option value="leafOrder">by Leaf Order</option>
