--- a/templates/base.html
+++ b/templates/base.html
@@ -3,9 +3,9 @@
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Comparative Visualization Tool">
+    <meta name="description" content="Psych Care">
     <meta name="Karthik Sama" content="Vislualization App">
-    <title>Comparative Vislualization Tool</title>
+    <title>Psych Care</title>
     
     <link href="/static/css/main.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet"/>
@@ -30,7 +30,7 @@
         <div class="row" style="margin-left: 0px; margin-right: 0px; height: 8%;">
           <nav class="navbar navbar-dark bg-dark">
             <div class="container-fluid">
-              <h5 style="color: aliceblue;">Comparative Visualization Tool</h5>
+              <h5 style="color: aliceblue;">Psych Care</h5>
             </div>
           </nav>
         </div>
@@ -79,7 +79,7 @@
             <!-- Feature options -->
             <div class="row">
               <div class="col-12 border d-flex justify-content-center">
-                {% if selected['f1'] == 'Survey PCA' or selected['f1'] == 'Survey PCA Scatter' %}
+                {% if selected['f1'] == 'Survey PCA Trend' or selected['f1'] == 'Survey PCA Scatter' %}
                   <form method="POST" action="/">
                     <div class="form-check form-check-inline">
                       <label class="form-check-label" for="mood1">Mood</label>
@@ -227,7 +227,7 @@
             <!-- Feature options -->
             <div class="row">
               <div class="col-12 border d-flex justify-content-center">
-                {% if selected['f2'] == 'Survey PCA' or selected['f2'] == 'Survey PCA Scatter' %}
+                {% if selected['f2'] == 'Survey PCA Trend' or selected['f2'] == 'Survey PCA Scatter' %}
                   <form method="POST" action="/">
                     <div class="form-check form-check-inline">
                     <label class="form-check-label" for="mood2">Mood</label>
